adds appendix with interview guide and expands methods

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -20916,3 +20916,18 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	langid = {english},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/W7W2FQFL/Fortin et al. - DEAP Evolutionary Algorithms Made Easy.pdf:application/pdf},
 }
+
+@book{yin_case_2018,
+	location = {Los Angeles},
+	edition = {Sixth edition},
+	title = {Case study research and applications: design and methods},
+	isbn = {978-1-5063-3616-9},
+	shorttitle = {Case study research and applications},
+	pagetotal = {319},
+	publisher = {{SAGE}},
+	author = {Yin, Robert K.},
+	date = {2018},
+	langid = {english},
+	keywords = {Case method, Research Methodology, Social sciences},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/WRGJUY36/Yin - 2018 - Case study research and applications design and methods.pdf:application/pdf},
+}
