--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -114,13 +114,14 @@ from a chosen supplier. If customers do not choose a supplier, they will receive
 the default supply, procured by the \ac{ipa}. In Illinois, consumers can opt for
 their municipality (where allowed) to negotiate electricity prices on their
 behalf through \ac{mca}. Municipalities may either select from an \ac{ares} or
-choose the default supply. Consumers that reside in a municipality without
-\ac{mca} may still choose to purchase electricity supply from an \ac{ares} as an
-individual. Of course, consumers and municipalities may, where permitted, obtain
-energy by investing in \ac{btm} resources, commonly rooftop solar panels or
-batteries. Municipalities that currently outsource their electricity procurement
-to \ac{imea} are contractually prohibited from building certain \ac{btm}
-resources.
+choose the default supply.\footnote{An \ac{ares} is an entity certified by the
+\ac{icc} that sells electricity to customers.} Consumers that reside in a
+municipality without \ac{mca} may still choose to purchase electricity supply
+from an \ac{ares} as an individual. Of course, consumers and municipalities may,
+where permitted, obtain energy by investing in \ac{btm} resources, commonly
+rooftop solar panels or batteries. Municipalities that currently outsource their
+electricity procurement to \ac{imea} are contractually prohibited from building
+certain \ac{btm} resources.
  
 % This section answers the following questions \begin{enumerate} \item Where do
 % consumers get their energy from? For example, the open energy market, their
@@ -133,52 +134,20 @@ resources.
 \section{Methodology}
 \label{section:interview-methods}
 
-\subsection{Interview Data Collection}
-
-A total of thirteen interviews were conducted through the second half of 2024
-and beginning of 2025 using a semi-structured approach.
-
-\begin{enumerate}
-    \item Who did I interview and what organizations were they from?
-    \item Why did I choose these interviews?
-    \item What do the different columns mean in Table \ref{tab:interviewees}?
-    \item When were the interviews conducted?
-    \item How were the interviews conducted? (i.e., over Zoom)
-    
-\begin{table}[ht!]
-    \centering
-    \caption{Interview participant codes and summary}
-    \label{tab:interviewees}
-    \begin{tabular}{llll}
-        \toprule
-        Number & Participant Code & Organization & Type \\
-        \midrule
-        1& UP1 &Urbana& Practitioner\\ % 
-        2& UP2 &\ac{uiuc}/Urbana& Practitioner\\ % 
-        3& UM1 &Urbana & Policy maker\\ % 
-        4& UI1 & \ac{uiuc} & Practitioner\\ % 
-        5& CP1 & Champaign & Practitioner\\ % 
-        6& IP1 & \ac{icc} & Practitioner\\ % 
-        7& IP2 & \ac{ipa} & Practitioner\\ % 
-        8& IA1 && Advocate\\ % 
-        9& IA2 &\ac{icea}& Practitioner\\ % 
-        10& IA3 &Illinois \ac{cub} & Advocate\\ % 
-        11& NP1 & Naperville & Practitioner\\ % 
-        12& NA1 &\acs{nest}&Advocate\\ % 
-        13& NA2 &\acs{nest}&Advocate\\ % 
-        \bottomrule
-    \end{tabular}
-\end{table}
-
 \subsection{Thematic Analysis}
 This section describes a multiple-case study using interviews with energy
-planners, decision makers, and community advocates at local and state levels,
-extending the method described by Johannsen et al. 2021
-\cite{johannsen_designing_2021}. The interviewees were chosen to be paradigmatic
-cases (\textcolor{red}{Is this really what I mean?}) \cite{flyvbjerg_five_2006}.
-The raw data include interview transcriptions and the relevant municipal climate
-and energy plans, if available. The interviews were transcribed with the
-``listen and revise method'' using the Whisper transcription tool
+planners, decision makers, and community advocates at local and state levels.
+The interviewees were chosen to exemplify maximum variation cases
+\cite{flyvbjerg_five_2006}. The participants and cases in this study
+vary in perspective and context in order to create a holistic narrative about
+energy planning within Illinois. A multiple-case study also enhances validity by
+enabling replication and comparison \cite{johannsen_designing_2021, yin_case_2018}. Further,
+since one purpose of this study is to evaluate the design and applicability of the tool, 
+\ac{osier}, a multiple-case study design will help extrapolate results to other places and 
+contexts. The
+raw data include interview transcriptions and the relevant municipal climate and
+energy plans, if available. The interviews were transcribed with the ``listen
+and revise method'' using the Whisper transcription tool
 \cite{battaglia_listen_2024}. Whisper uses \ac{ai} to automate the transcription
 process. Both the data and the \ac{ai} model used to transcribe the interview
 audio were hosted locally (i.e., without an internet connection), eliminating
@@ -207,7 +176,46 @@ of the \texttt{Taguette} software.
     \label{fig:taguette}
 \end{figure}
 
+\subsection{Interview Data Collection}
+
+A total of thirteen interviews were conducted through the second half of 2024
+and beginning of 2025 using a semi-structured approach based on an interview
+guide structured according to three main topics (for details, see Appendix
+\ref{chapter:interview-guide}).
+
+\begin{enumerate}
+    \item Who did I interview and what organizations were they from?
+    \item Why did I choose these interviews?
+    \item What do the different columns mean in Table \ref{tab:interviewees}?
+    \item When were the interviews conducted?
+    \item How were the interviews conducted? (i.e., over Zoom)
 \end{enumerate}
+    
+\begin{table}[ht!]
+    \centering
+    \caption{Interview participant codes and summary}
+    \label{tab:interviewees}
+    \begin{tabular}{llll}
+        \toprule
+        Number & Participant Code & Organization & Type \\
+        \midrule
+        1& UP1 &Urbana& Practitioner\\ % 
+        2& UP2 &\ac{uiuc}/Urbana& Practitioner\\ % 
+        3& UM1 &Urbana & Policy maker\\ % 
+        4& UI1 & \ac{uiuc} & Practitioner\\ % 
+        5& CP1 & Champaign & Practitioner\\ % 
+        6& IP1 & \ac{icc} & Practitioner\\ % 
+        7& IP2 & \ac{ipa} & Practitioner\\ % 
+        8& IA1 && Advocate\\ % 
+        9& IA2 &\ac{icea}& Practitioner\\ % 
+        10& IA3 &Illinois \ac{cub} & Advocate\\ % 
+        11& NP1 & Naperville & Practitioner\\ % 
+        12& NA1 &\acs{nest}&Advocate\\ % 
+        13& NA2 &\acs{nest}&Advocate\\ % 
+        \bottomrule
+    \end{tabular}
+\end{table}
+
 
 \section{Case Regions}
 \label{section:cases}
@@ -353,10 +361,11 @@ communities, including Naperville. The 2036 report also identified ``energy
 equity'' as a sustainability objective. Although equity is not explicitly
 defined, the authors describe disproportionality and implore that
 \begin{quote}
-    \blockcquote[11]{trendler_sustainable_2021}{it is imperative that sustainability 
-    planning and actions pro-actively account for human and environmental  
-    impacts from emissions, pollution and natural resource destruction created 
-    by Naperville's energy purchases and  consumption --- beyond our immediate 
+    \blockcquote[11]{trendler_sustainable_2021}{it is imperative that
+    sustainability planning and actions pro-actively account for human and
+    environmental  
+    impacts from emissions, pollution and natural resource destruction created
+    by Naperville's energy purchases and  consumption --- beyond our immediate
     community boundaries as well as those created within.}
 \end{quote}
 \begin{enumerate}
