updates literature review

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -20931,3 +20931,82 @@ battery storage for each {PJM} zone, region, locational deliverability area
 	keywords = {Case method, Research Methodology, Social sciences},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/WRGJUY36/Yin - 2018 - Case study research and applications design and methods.pdf:application/pdf},
 }
+
+@article{diezmartinez_us_2022,
+	title = {{US} cities increasingly integrate justice into climate planning and create policy tools for climate justice},
+	volume = {13},
+	rights = {2022 The Author(s)},
+	issn = {2041-1723},
+	url = {https://www.nature.com/articles/s41467-022-33392-9},
+	doi = {10.1038/s41467-022-33392-9},
+	abstract = {Climate change is one of the most important ethical issues of our time. Urban scholars and policymakers now recognise the need to address justice concerns associated with cities’ responses to climate change. However, little empirical research has examined whether and how cities have integrated justice into climate mitigation planning. Here, we show that large cities in the {US} are increasingly attending to justice in their climate action plans and that the recognition of structural and historical injustices is becoming more common. We demonstrate that justice is articulated differently across mitigation sectors, uncover local characteristics that may impact cities’ level of engagement with justice, and introduce four policy tools that pioneer cities have developed to operationalise just climate policies on the ground. More attention to justice in policy implementation and evaluation is needed as cities continue to move toward just urban transitions.},
+	pages = {5763},
+	number = {1},
+	journaltitle = {Nature Communications},
+	shortjournal = {Nat Commun},
+	author = {Diezmartínez, Claudia V. and Short Gianotti, Anne G.},
+	urldate = {2025-07-23},
+	date = {2022-09-30},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Climate-change mitigation, Climate-change policy},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/RKKS8PXR/Diezmartínez and Short Gianotti - 2022 - US cities increasingly integrate justice into climate planning and create policy tools for climate j.pdf:application/pdf},
+}
+
+@article{diezmartinez_municipal_2024,
+	title = {Municipal finance shapes urban climate action and justice},
+	volume = {14},
+	rights = {2024 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {1758-6798},
+	url = {https://www.nature.com/articles/s41558-024-01924-4},
+	doi = {10.1038/s41558-024-01924-4},
+	abstract = {Implementing climate policies and programmes in cities requires substantial investments that inevitably entangle climate action with urban climate finance—the mechanisms and practices city governments use to pay for climate efforts. Here we use {US} cities as a case study to examine how climate finance impacts, and is impacted by, the pursuit of urban climate action and climate justice. Drawing on 34 expert interviews, we show how municipal financial decisions and budgetary practices are shaping how, when and for whom cities are responding to climate change. We demonstrate how public spending decisions are intertwined with the logics of debt financing and examine the impacts of these relationships on cities’ climate investments. We showcase the structuring impacts of finance on climate action and the built environment, and we introduce pathways through which climate and justice considerations are already being integrated into, and potentially transforming, municipal finance in the United States.},
+	pages = {247--252},
+	number = {3},
+	journaltitle = {Nature Climate Change},
+	shortjournal = {Nat. Clim. Chang.},
+	author = {Diezmartínez, Claudia V. and Short Gianotti, Anne G.},
+	urldate = {2025-07-23},
+	date = {2024-03},
+	langid = {english},
+	note = {Publisher: Nature Publishing Group},
+	keywords = {Climate-change adaptation, Climate-change mitigation, Climate-change policy},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/CCWTHNK8/Diezmartínez and Short Gianotti - 2024 - Municipal finance shapes urban climate action and justice.pdf:application/pdf},
+}
+
+@article{baker_metrics_2023,
+	title = {Metrics for Decision-Making in Energy Justice},
+	volume = {48},
+	issn = {1543-5938, 1545-2050},
+	url = {https://www.annualreviews.org/content/journals/10.1146/annurev-environ-112621-063400},
+	doi = {10.1146/annurev-environ-112621-063400},
+	abstract = {Energy equity and justice have become priority considerations for policymakers, practitioners, and scholars alike. To ensure that energy equity is incorporated into actual decisions and analysis, it is necessary to design, use, and continually improve energy equity metrics. In this article, we review the literature and practices surrounding such metrics. We present a working definition for energy justice and equity, and connect them to both criteria for and frameworks of metrics. We then present a large sampling of energy equity metrics, including those focused on vulnerability, wealth creation, energy poverty, life cycle, and comparative country-level dynamics.We conclude with a discussion of the limitations, gaps, and trade-offs associated with these various metrics and their interactions thereof.},
+	pages = {737--760},
+	issue = {Volume 48, 2023},
+	journaltitle = {Annual Review of Environment and Resources},
+	author = {Baker, Erin and Carley, Sanya and Castellanos, Sergio and Nock, Destenie and Bozeman, Joe F. and Konisky, David and Monyei, Chukwuka G. and Shah, Monisha and Sovacool, Benjamin},
+	urldate = {2025-07-23},
+	date = {2023-11-13},
+	langid = {english},
+	note = {Publisher: Annual Reviews},
+	file = {Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/L57DVL8K/Baker et al. - 2023 - Metrics for Decision-Making in Energy Justice.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/R2NMIYP5/annurev-environ-112621-063400.html:text/html},
+}
+
+@article{shen_facilitating_2021,
+	title = {Facilitating Power Grid Decarbonization with Distributed Energy Resources: Lessons from the United States},
+	volume = {46},
+	issn = {1543-5938, 1545-2050},
+	url = {https://www.annualreviews.org/content/journals/10.1146/annurev-environ-111320-071618},
+	doi = {10.1146/annurev-environ-111320-071618},
+	shorttitle = {Facilitating Power Grid Decarbonization with Distributed Energy Resources},
+	abstract = {Decarbonizing power grids is an essential pillar of global efforts to mitigate climate change impacts. Renewable energy generation is expected to play an important role in electricity decarbonization, although its variability and uncertainty are creating new flexibility challenges for electric grid operators that must match supply with constantly changing demand. Distributed energy resources ({DERs})—including distributed generation, demand response, and distributed energy storage—can play an important role in providing the flexibility needed to integrate high penetrations of renewable energy. This article examines federal and state enabling policies and regulations for {DER}, market strategies and business models that have facilitated {DER} expansion, and key emerging challenges for {DER} in the United States. Based on a review of the {US} experience, the article offers lessons for other countries, focusing on the role and limits of policy, the facilitative role of utility regulatory reform, the need to balance different interests in tariff design, the benefits of {DER} participation in wholesale markets, and the importance of proactive interconnection policies.},
+	pages = {349--375},
+	issue = {Volume 46, 2021},
+	journaltitle = {Annual Review of Environment and Resources},
+	author = {Shen, Bo and Kahrl, Fredrich and Satchwell, Andrew J.},
+	urldate = {2025-07-23},
+	date = {2021-10-18},
+	langid = {english},
+	note = {Publisher: Annual Reviews},
+	file = {Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/ISXJCMUV/Shen et al. - 2021 - Facilitating Power Grid Decarbonization with Distributed Energy Resources Lessons from the United S.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/AK36R8YU/annurev-environ-111320-071618.html:text/html},
+}
