--- a/docs/2025-dotson-thesis.tex
+++ b/docs/2025-dotson-thesis.tex
@@ -125,13 +125,13 @@ text width=22em, text centered, rounded corners, minimum height=3em]
 % hundred doctoral students\ldots.
 % \end{abstract}
 
-\begin{dedication}
-[F]or the kids like me who got ADHD.\\
-\rule{17em}{0.4pt}\\
-\hspace{13em} ``ISIS''\\
-% \hspace{8em} --- Joyner Lucas\\ 
-\hspace{10em} Joyner Lucas\\ 
-\end{dedication}
+% \begin{dedication}
+% [F]or the kids like me who got ADHD.\\
+% \rule{17em}{0.4pt}\\
+% \hspace{13em} ``ISIS''\\
+% % \hspace{8em} --- Joyner Lucas\\ 
+% \hspace{10em} Joyner Lucas\\ 
+% \end{dedication}
 
 % \begin{acknowledgments}   
 % People to acknowledge
