--- a/docs/7-interviews/70-outline.tex
+++ b/docs/7-interviews/70-outline.tex
@@ -38,18 +38,42 @@ collecting and analyzing interview data using thematic analysis. Section
 \textcolor{red}{Lastly, an analysis and discussion of the interviews.}
 
 
-\section{Literature Review?}
+\section{Literature Review}
+Chapter \ref{chapter:lit-review} provided a thorough review of the existing
+literature that contextualizes this thesis. This section offers a focused review
+of the literature on municipal energy planning and modeling practices.
 
-What are some relevant papers in the literature?
-\begin{enumerate}
-    \item Multiple case study that looks at multiple scales of energy governance
-    in the state of Illinois. Other studies that investigated multiple cases
-    only looked at the energy policy and decision making at the municipal level
-    \cite{johannsen_designing_2021, ben_amer_too_2020}.
-    \item Another study asked ``What are the differences between energy model
-    improvements as perceived by modellers, and the actual needs of users of
-    model results'' \cite{susser_better_2022}?
-\end{enumerate}
+\subsection{Municipal use of energy models}
+
+Energy modeling has focused on energy systems at national and regional scales
+due to the traditionally centralized nature of energy infrastructure. However,
+the spread of \acp{der} suggests that municipalities have an opportunity to play
+a larger role in shaping the clean energy transition
+\cite{shen_facilitating_2021}. Despite this, both Ben Amer et al. 2020, and
+Johannsen et al. 2021 found that \acp{esom} are seldom used at the municipal
+level \cite{ben_amer_too_2020,johannsen_designing_2021}. These studies agree
+that municipal planners do not have time nor the requisite expertise to use
+\acp{esom} themselves and generally hire consultants to perform the analyses,
+when needed. They further argue that municipal planners do not employ \acp{esom}
+because input data are difficult to find, the models do not have a scope
+suitable for municipalities, and they lack desirable features. Indeed,
+S\"{u}sser et al. investigated the needs of modelers and users and found that
+modelers prioritize ``realism'' and complexity while users prefer
+understandability and clear communication \cite{susser_better_2022}. All three
+studies conclude that greater collaboration and earlier involvement between
+modelers and planners would yield superior results. Only Ben Amer et al.
+identify consulting and personnel costs as potential barriers to incorporating
+modeling results into decision making processes.
+
+\subsection{Energy justice and planning}
+There is only one paper I could find related to justice and planning documents
+--- ``Frontlining energy justice'' \cite{elmallah_frontlining_2022}.
+
+Actually, there is another by Sovacool \cite{sovacool_imagining_2020}.
+
+I found two more potential articles by the same first author
+\cite{diezmartinez_us_2022,diezmartinez_municipal_2024}
+
 
 \textcolor{red}{Is the hypothesis I am testing with this study that
 ``municipalities would be better equipped to plan and design their energy
@@ -115,13 +139,15 @@ the default supply, procured by the \ac{ipa}. In Illinois, consumers can opt for
 their municipality (where allowed) to negotiate electricity prices on their
 behalf through \ac{mca}. Municipalities may either select from an \ac{ares} or
 choose the default supply.\footnote{An \ac{ares} is an entity certified by the
-\ac{icc} that sells electricity to customers.} Consumers that reside in a
-municipality without \ac{mca} may still choose to purchase electricity supply
-from an \ac{ares} as an individual. Of course, consumers and municipalities may,
-where permitted, obtain energy by investing in \ac{btm} resources, commonly
-rooftop solar panels or batteries. Municipalities that currently outsource their
-electricity procurement to \ac{imea} are contractually prohibited from building
-certain \ac{btm} resources.
+\ac{icc} that sells electricity to customers. This electricity is generated
+through privately owned resources or through purchases from the electricity
+market.} Although not depicted in Figure \ref{fig:illinois-flow-chart},
+consumers that reside in a municipality without \ac{mca} may still choose to
+purchase electricity supply from an \ac{ares} as an individual. Of course,
+consumers and municipalities may, where permitted, obtain energy by investing in
+\ac{btm} resources, commonly rooftop solar panels or batteries. Municipalities
+that currently outsource their electricity procurement to \ac{imea} are
+contractually prohibited from building certain \ac{btm} resources.
  
 % This section answers the following questions \begin{enumerate} \item Where do
 % consumers get their energy from? For example, the open energy market, their
@@ -138,21 +164,21 @@ certain \ac{btm} resources.
 This section describes a multiple-case study using interviews with energy
 planners, decision makers, and community advocates at local and state levels.
 The interviewees were chosen to exemplify maximum variation cases
-\cite{flyvbjerg_five_2006}. The participants and cases in this study
-vary in perspective and context in order to create a holistic narrative about
-energy planning within Illinois. A multiple-case study also enhances validity by
-enabling replication and comparison \cite{johannsen_designing_2021, yin_case_2018}. Further,
-since one purpose of this study is to evaluate the design and applicability of the tool, 
-\ac{osier}, a multiple-case study design will help extrapolate results to other places and 
-contexts. The
-raw data include interview transcriptions and the relevant municipal climate and
-energy plans, if available. The interviews were transcribed with the ``listen
-and revise method'' using the Whisper transcription tool
-\cite{battaglia_listen_2024}. Whisper uses \ac{ai} to automate the transcription
-process. Both the data and the \ac{ai} model used to transcribe the interview
-audio were hosted locally (i.e., without an internet connection), eliminating
-privacy concerns \cite{battaglia_listen_2024}. Figure \ref{fig:whisper} shows a
-screenshot of the Whisper interface. 
+\cite{flyvbjerg_five_2006}. The participants and cases in this study vary in
+perspective and context in order to create a holistic narrative about energy
+planning within Illinois. A multiple-case study also enhances validity by
+enabling replication and comparison \cite{johannsen_designing_2021,
+yin_case_2018}. Further, since one purpose of this study is to evaluate the
+design and applicability of the tool, \ac{osier}, a multiple-case study design
+will help extrapolate results to other places and contexts. The raw data include
+interview transcriptions and the relevant municipal climate and energy plans, if
+available. The interviews were transcribed with the ``listen and revise method''
+using the Whisper transcription tool \cite{battaglia_listen_2024}. Whisper uses
+\ac{ai} to automate the transcription process. Both the data and the \ac{ai}
+model used to transcribe the interview audio were hosted locally (i.e., without
+an internet connection), eliminating privacy concerns
+\cite{battaglia_listen_2024}. Figure \ref{fig:whisper} shows a screenshot of the
+Whisper interface. 
 
 \begin{figure}[htbp!]
     \centering
@@ -178,17 +204,32 @@ of the \texttt{Taguette} software.
 
 \subsection{Interview Data Collection}
 
-A total of thirteen interviews were conducted through the second half of 2024
-and beginning of 2025 using a semi-structured approach based on an interview
-guide structured according to three main topics (for details, see Appendix
+A total of thirteen interviews were conducted virtually using the Zoom
+teleconferencing software through the second half of 2024 and beginning of 2025
+using a semi-structured approach based on an interview guide designed according
+to \textcolor{red}{X} main topics (for details, see Appendix
 \ref{chapter:interview-guide}).
-
 \begin{enumerate}
-    \item Who did I interview and what organizations were they from?
-    \item Why did I choose these interviews?
-    \item What do the different columns mean in Table \ref{tab:interviewees}?
-    \item When were the interviews conducted?
-    \item How were the interviews conducted? (i.e., over Zoom)
+    \item Background
+    \item Existing planning processes
+    \item Conceptions of justice or equity
+    \item Use of models in planning processes
+    \item Assessment of the \ac{osier} tool.
+\end{enumerate}
+The interviewees were chosen through purposive sampling in order to ... 
+\textcolor{red}{why did I choose these interviews?}
+
+Table \ref{tab:interviewees} summarizes the interviewees for this study. The
+organization column refers to the organization that either employs, or is
+represented by, the interviewee. The \textit{type} column assigns the
+interviewee a broad category including
+\begin{enumerate}
+    \item practicioner --- someone involved in the process of energy planning
+    and carries out policy directives from policy makers,
+    \item advocate --- a person or organization that lobbies for policy outcomes
+    on behalf of a group of stakeholder,
+    \item policy maker --- someone that participates in the ultimate decision
+    making related to energy policy.
 \end{enumerate}
     
 \begin{table}[ht!]
@@ -354,12 +395,13 @@ formed by the Naperville City Council, the targets outlined in this plan are not
 commitments set forth by the city council. The \ac{nest} report proposed
 strategies to limit Naperville's carbon emissions to 0.968 million metric tonnes
 of \ac{co2eq} by 2036 and achieving net-zero emissions by 2050. The primary
-means of reducing carbon emissions are expanding local energy generation and
-eliminating electricity supplied from the Prairie State Coal Plant --- a coal
-plant partially owned by \ac{imea} which procures electricity for its member
-communities, including Naperville. The 2036 report also identified ``energy
-equity'' as a sustainability objective. Although equity is not explicitly
-defined, the authors describe disproportionality and implore that
+means of reducing carbon emissions identified in the report are expanding local
+energy generation and eliminating electricity supplied from the Prairie State
+Coal Plant --- a coal plant partially owned by \ac{imea} which procures
+electricity for its member communities, including Naperville. The 2036 report
+also identified ``energy equity'' as a sustainability objective. Although equity
+is not explicitly defined, the authors describe disproportionality and implore
+that
 \begin{quote}
     \blockcquote[11]{trendler_sustainable_2021}{it is imperative that
     sustainability planning and actions pro-actively account for human and
@@ -376,6 +418,11 @@ defined, the authors describe disproportionality and implore that
 
 
 \section{Aim 1: Energy planning and the use of models}
+
+None of the municipalities considered in this study, Naperville, Champaign,
+Urbana, nor \ac{uiuc}, use \acp{esom} to guide energy planning and investment
+decisions.  
+
 
 
 \section{Aim 2: Considerations of justice in energy planning}
@@ -395,15 +442,15 @@ examples and quotes here ...]}.
 in general? ]
 
 Despite tension, advocacy groups in Illinois gained some significant ground with
-\ac{ceja}'s passage in 2021. 
+\ac{ceja}'s passage in 2021. In the words of interviewee IA3:
 
-\begin{quotation}
+\begin{quote}
     We have to incorporate into law, not just affordability, but environmental
     justice, utility justice, utility democracy, all of these other concepts.
     And you know, did we get a law that properly focused all those things?
     Definitely not. But it did introduce these concepts into Illinois in, I
     think, a pretty significant way.
-\end{quotation}
+\end{quote}
 
 % \block
 
