--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -105,5 +105,6 @@
 \acro{miso}[MISO]{Midcontinent Indenpendent System Operator}
 \acro{btm}[BTM]{behind-the-meter}
 \acro{eia}[EIA]{Energy Information Administration}
+\acro{der}[DER]{distributed energy resource}
 
 
